2024-04-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-inhibit-errors-if-setting-file-attributes-fail):
	New defcustom.
	(tramp-skeleton-set-file-modes-times-uid-gid): Use it.

2024-04-02  Po Lu  <luangruo@yahoo.com>

	* tramp-androidsu.el (tramp-androidsu-remote-path): Set type to
	'(repeat string).

2024-04-01  Po Lu  <luangruo@yahoo.com>

	* tramp-androidsu.el (tramp-androidsu-handle-make-process):
	Disable exec loader around call to setuid su binary.

2024-03-26  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 29.3.

2024-03-14  Tim Landscheidt  <tim@tim-landscheidt.de>

	* tramp-cmds.el (tramp-cleanup-some-buffers):
	Replace (with-current-buffer (get-buffer ...) ...) with
	(with-current-buffer ...).

2024-03-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-maybe-open-connection):
	Unset environment variable PS2.

	* tramp-androidsu.el (tramp-default-host-alist): Don't add an
	entry; `tramp-default-host' is set properly.
	(tramp-androidsu-maybe-open-connection): Don't set connection
	property "remote-namespace" to nil, this is the default anyway.
	Don't set connection property "remote-path", we use
	connection-local values instead.  Unset environment variable PS2.
	Dump shell options after setting all of them.
	(tramp-androidsu-handle-make-process): Don't use hard-coded user "root".
	(tramp-androidsu-connection-local-default-variables): New defvar.
	Add it to connection-local profiles.

2024-03-06  Po Lu  <luangruo@yahoo.com>

	* tramp-adb.el (tramp-adb-handle-file-writable-p): Ignore the
	file-attributes cache, since file mode is not a reliable indicator
	of writability.

	* tramp-androidsu.el (tramp-androidsu-generate-wrapper):
	Arguments to fset must be symbols rather than functions.

2024-03-05  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (LISP_FILES): Add tramp-androidsu.el.
