@@ -1,3 +1,8 @@
+2024-04-21  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-sh-handle-insert-directory): Do not use
+	"--dired" when long format output isn't requested.
+
 2024-04-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-inhibit-errors-if-setting-file-attributes-fail):
